; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_tls.c_eap_tls_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_tls.c_eap_tls_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_tls_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.eap_sm*, i8*)* @eap_tls_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eap_tls_reset(%struct.eap_sm* %0, i8* %1) #0 {
  %3 = alloca %struct.eap_sm*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.eap_tls_data*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.eap_tls_data*
  store %struct.eap_tls_data* %7, %struct.eap_tls_data** %5, align 8
  %8 = load %struct.eap_tls_data*, %struct.eap_tls_data** %5, align 8
  %9 = icmp eq %struct.eap_tls_data* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %18

11:                                               ; preds = %2
  %12 = load %struct.eap_sm*, %struct.eap_sm** %3, align 8
  %13 = load %struct.eap_tls_data*, %struct.eap_tls_data** %5, align 8
  %14 = getelementptr inbounds %struct.eap_tls_data, %struct.eap_tls_data* %13, i32 0, i32 0
  %15 = call i32 @eap_server_tls_ssl_deinit(%struct.eap_sm* %12, i32* %14)
  %16 = load %struct.eap_tls_data*, %struct.eap_tls_data** %5, align 8
  %17 = call i32 @os_free(%struct.eap_tls_data* %16)
  br label %18

18:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @eap_server_tls_ssl_deinit(%struct.eap_sm*, i32*) #1

declare dso_local i32 @os_free(%struct.eap_tls_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
